# CppND-Capstone-Checkers

./: CMakeLists.txt  README.md
src/: Board.cc  Board.h  Cell.cc  Cell.h  Game.cc  Game.h  Move.h  Player.cpp  Player.h  Position.h  main.cpp
src/Player/: BasePlayer.cpp  BasePlayer.h  Player.cpp  Player.h
src/Player/AI/: AI.cpp  AI.h
src/Player/AI/Jarvis/: Jarvis.cpp  Jarvis.h
src/UI/: UI.cpp  UI.h
src/UI/Console/: ConsoleUI.cpp  ConsoleUI.h
